// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Audit Setup > Participants renders empty state correctly 1`] = `
<div>
  <form
    data-testid="form-one"
  >
    <div
      class="sc-bwzfXH jFbAHP"
    >
      <h2
        class="bp3-heading sc-bdVaJa ibVpPq"
      >
        Participants
      </h2>
      <div
        class="sc-htoDjs jcQPAQ"
      >
        <div
          class="sc-dnqmqq kGMqKN"
        >
          Click "Browse" to choose the appropriate file from your computer. This file should be a comma-separated list of all the jurisdictions participating in the audit, plus email addresses for audit administrators in each participating jurisdiction.
          <br />
          <br />
          <a
            href="/sample_jurisdiction_filesheet.csv"
            rel="noopener noreferrer"
            target="_blank"
          >
            (Click here to view a sample file in the correct format.)
          </a>
        </div>
      </div>
      <div
        class="sc-htoDjs jcQPAQ"
      >
        <label
          class="bp3-file-input"
        >
          <input
            accept=".csv"
            name="csv"
            type="file"
          />
          <span
            class="bp3-file-upload-input"
          >
            Select a CSV...
          </span>
        </label>
      </div>
    </div>
    <div
      class="sc-htpNat gtULUV"
    >
      <button
        class="bp3-button bp3-intent-primary sc-EHOje gmpgQN"
        type="submit"
      >
        <span
          class="bp3-button-text"
        >
          Save & Next
        </span>
      </button>
    </div>
  </form>
</div>
`;

exports[`Audit Setup > Participants renders filled state correctly & resets file 1`] = `
<div>
  <form
    data-testid="form-one"
  >
    <div
      class="sc-bwzfXH jFbAHP"
    >
      <h2
        class="bp3-heading sc-bdVaJa ibVpPq"
      >
        Participants
      </h2>
      <div
        class="sc-htoDjs jcQPAQ"
      >
        <div
          class="sc-dnqmqq kGMqKN"
        >
          Click "Browse" to choose the appropriate file from your computer. This file should be a comma-separated list of all the jurisdictions participating in the audit, plus email addresses for audit administrators in each participating jurisdiction.
          <br />
          <br />
          <a
            href="/sample_jurisdiction_filesheet.csv"
            rel="noopener noreferrer"
            target="_blank"
          >
            (Click here to view a sample file in the correct format.)
          </a>
        </div>
      </div>
      <div
        class="sc-htoDjs jcQPAQ"
      >
        <span>
          filename.csv
           
        </span>
        <button
          class="bp3-button sc-EHOje gmpgQN"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            Replace File
          </span>
        </button>
      </div>
    </div>
    <div
      class="sc-htpNat gtULUV"
    >
      <button
        class="bp3-button bp3-intent-primary sc-EHOje gmpgQN"
        type="submit"
      >
        <span
          class="bp3-button-text"
        >
          Save & Next
        </span>
      </button>
    </div>
  </form>
</div>
`;

exports[`Audit Setup > Participants renders filled state correctly & resets file 2`] = `
<div>
  <form
    data-testid="form-one"
  >
    <div
      class="sc-bwzfXH jFbAHP"
    >
      <h2
        class="bp3-heading sc-bdVaJa ibVpPq"
      >
        Participants
      </h2>
      <div
        class="sc-htoDjs jcQPAQ"
      >
        <div
          class="sc-dnqmqq kGMqKN"
        >
          Click "Browse" to choose the appropriate file from your computer. This file should be a comma-separated list of all the jurisdictions participating in the audit, plus email addresses for audit administrators in each participating jurisdiction.
          <br />
          <br />
          <a
            href="/sample_jurisdiction_filesheet.csv"
            rel="noopener noreferrer"
            target="_blank"
          >
            (Click here to view a sample file in the correct format.)
          </a>
        </div>
      </div>
      <div
        class="sc-htoDjs jcQPAQ"
      >
        <label
          class="bp3-file-input"
        >
          <input
            accept=".csv"
            name="csv"
            type="file"
          />
          <span
            class="bp3-file-upload-input"
          >
            Select a CSV...
          </span>
        </label>
      </div>
    </div>
    <div
      class="sc-htpNat gtULUV"
    >
      <button
        class="bp3-button bp3-intent-primary sc-EHOje gmpgQN"
        type="submit"
      >
        <span
          class="bp3-button-text"
        >
          Save & Next
        </span>
      </button>
    </div>
  </form>
</div>
`;
